Noughts and Crosses (0.3)

	* Добавлено главное меню
	* Добавлена возможность изменять сложность игры, игровую сторону, размер игрового поля
	* Небольшие улучшения самой программы
	
-Konstantin Zyryanov <post.herzog@gmail.com> Ср. 11 сент. 2013 02:01:53 YEKT

Noughts and Crosses (0.2)

	* Небольшие улучшения и исправления в работе ИИ

-Konstantin Zyryanov <post.herzog@gmail.com> Вс. 08 сент. 2013 02:09:37 YEKT
